--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         
         <section id="hero" class="text-center mb-16 md:mb-24">
             <div class="w-32 h-32 md:w-40 md:h-40 mx-auto mb-6 rounded-full bg-gray-300 overflow-hidden border-4 border-white shadow-lg">
-                <img src="https://placehold.co/160x160/ccc5b9/403d39?text=UK" alt="Umair Khalid" class="w-full h-full object-cover">
+                <img src="ProfilePicCroped.png" alt="Umair Khalid" class="w-full h-full object-cover">
             </div>
             <h1 class="text-4xl md:text-6xl font-bold mb-2 text-[#252422]">Umair Khalid</h1>
             <p class="text-xl md:text-2xl text-[#6b6762] mb-6">.NET Web & API Developer</p>
@@ -301,3 +301,4 @@
     </script>
 </body>
 </html>
+
