--- a/index.html
+++ b/index.html
@@ -104,16 +104,20 @@
 
         <section id="summary" class="mb-16 md:mb-24 scroll-mt-20">
             <div class="max-w-3xl mx-auto bg-white p-8 rounded-lg shadow-sm">
-                <h2 class="text-3xl font-bold mb-4 text-[#252422]">Professional Summary</h2>
+                <h2 class="text-3xl font-bold mb-4 text-[#252422]">
+                    Profile Summary
+                </h2>
                 <p class="text-lg leading-relaxed text-[#403d39]">
-                    This section provides a brief overview of my professional background. As a dedicated .NET Web & API Developer with 1.5 years of experience, I specialize in full-stack development using technologies like Razor Pages, MVC, and Blazor. My skills include C#, EF Core, and SQL Server. I am passionate about building robust applications and continuously advancing my expertise in API development and cloud integration.
+                    Motivated and detail-oriented **.NET Developer** with over **1.5 years of practical experience** in building web applications using Razor Pages, MVC, and Blazor. Proficient in C#, EF Core, LINQ, and SQL Server, with a strong foundation in both frontend and backend development. Experienced in designing admin panels, user management systems, and database-driven applications. Currently enhancing skills in API development to deliver scalable and modern web solutions.
                 </p>
             </div>
         </section>
 
         <section id="skills" class="mb-16 md:mb-24 scroll-mt-20">
             <div class="max-w-3xl mx-auto text-center">
-                <h2 class="text-3xl font-bold mb-4 text-[#252422]">Technical Skills</h2>
+                <h2 class="text-3xl font-bold mb-4 text-[#252422]">
+                    Technical Skills
+                </h2>
                 <p class="text-lg leading-relaxed mb-8 text-[#6b6762]">
                     Here is a visualization of my technical skillset, categorized by area of expertise. This chart offers a quick look at my capabilities in backend and frontend development, databases, and more. Hover over the points on the chart to see specific technologies.
                 </p>
@@ -127,25 +131,38 @@
 
         <section id="projects" class="mb-16 md:mb-24 scroll-mt-20">
             <div class="max-w-5xl mx-auto">
-                <h2 class="text-3xl font-bold text-center mb-4 text-[#252422]">Projects</h2>
+                <h2 class="text-3xl font-bold text-center mb-4 text-[#252422]">
+                    Projects
+                </h2>
                 <p class="text-lg leading-relaxed mb-12 text-center text-[#6b6762]">
                     Below are some of the key projects I've developed. This section showcases my ability to apply my technical skills to create real-world applications, from portfolio sites to e-book platforms. Each project highlights a different aspect of my development experience.
                 </p>
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="bg-white rounded-lg shadow-sm p-6 transform hover:-translate-y-2 transition-transform duration-300">
                         <h3 class="text-xl font-bold mb-2 text-[#252422]">Portfolio Website</h3>
-                        <p class="text-sm font-medium text-[#a37e62] mb-3">Razor Pages, .NET 8, EF Core</p>
-                        <p class="text-[#403d39]">Built a personal portfolio with a secure admin panel and full CRUD functionality to manage content.</p>
+                        <p class="text-sm font-medium text-[#a37e62] mb-3">Razor Pages, .NET 8, EF Core, SQL Server</p>
+                        <ul class="text-sm list-disc list-inside text-[#403d39] space-y-1">
+                            <li>Built a personal portfolio site with sections for profile, education, skills, and contact details.</li>
+                            <li>Designed and implemented a secure admin panel with login and content management features.</li>
+                            <li>Integrated database operations with EF Core for dynamic data handling.</li>
+                        </ul>
                     </div>
                     <div class="bg-white rounded-lg shadow-sm p-6 transform hover:-translate-y-2 transition-transform duration-300">
-                        <h3 class="text-xl font-bold mb-2 text-[#252422]">E-Book Shelf</h3>
-                        <p class="text-sm font-medium text-[#a37e62] mb-3">Blazor Server, .NET 9, LINQ</p>
-                        <p class="text-[#403d39]">Developed an online book reading platform featuring user dashboards and a comprehensive admin panel.</p>
+                        <h3 class="text-xl font-bold mb-2 text-[#252422]">E-Book Shelf Web App</h3>
+                        <p class="text-sm font-medium text-[#a37e62] mb-3">Blazor Server, .NET 9, EF Core, LINQ, SQL Server</p>
+                        <ul class="text-sm list-disc list-inside text-[#403d39] space-y-1">
+                            <li>Developed an online platform for reading and managing e-books with user accounts, reading history, and rating features.</li>
+                            <li>Created an admin dashboard to manage subscriptions, books, roles, and homepage content.</li>
+                            <li>Designed a responsive UI with custom components and implemented role-based access control.</li>
+                        </ul>
                     </div>
                     <div class="bg-white rounded-lg shadow-sm p-6 transform hover:-translate-y-2 transition-transform duration-300">
                         <h3 class="text-xl font-bold mb-2 text-[#252422]">Blog Site (In Progress)</h3>
-                        <p class="text-sm font-medium text-[#a37e62] mb-3">ASP.NET MVC, .NET 8, EF Core</p>
-                        <p class="text-[#403d39]">Currently creating a dynamic blog system with robust user authentication and content management features.</p>
+                        <p class="text-sm font-medium text-[#a37e62] mb-3">ASP.NET MVC, .NET 8, EF Core, SQL Server</p>
+                        <ul class="text-sm list-disc list-inside text-[#403d39] space-y-1">
+                            <li>Currently developing a blogging platform to apply MVC concepts.</li>
+                            <li>Implementing features such as authentication, CRUD posts, and category management.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -153,7 +170,9 @@
         
         <section id="education" class="scroll-mt-20">
              <div class="max-w-3xl mx-auto">
-                <h2 class="text-3xl font-bold text-center mb-4 text-[#252422]">Education & Certifications</h2>
+                <h2 class="text-3xl font-bold text-center mb-4 text-[#252422]">
+                    Education & Certifications
+                </h2>
                 <p class="text-lg leading-relaxed mb-12 text-center text-[#6b6762]">
                     My academic background and commitment to continuous learning are outlined below. This timeline tracks my journey from my university coursework to professional certifications that have expanded my skillset.
                 </p>
@@ -162,19 +181,20 @@
                         <h3 class="text-xl font-bold text-[#252422]">Bachelor of Science in Computer Science</h3>
                         <p class="font-medium text-[#6b6762]">Air University, Islamabad</p>
                         <p class="text-sm text-[#a37e62]">2022 – 2027 (Expected)</p>
-                        <p class="mt-2 text-[#403d39]">Relevant Coursework: OOP, Database Systems, Web Development, Data Structures & Algorithms.</p>
+                        <p class="mt-2 text-[#403d39]">Successfully completed 4 semesters with a CGPA of 2.78. Relevant coursework: Object-Oriented Programming, Database Systems, Web Development, Data Structures & Algorithms.</p>
+                        <p class="mt-1 text-[#403d39]">Developed multiple academic projects in C++, Flutter, and .NET full-stack applications.</p>
                     </div>
                     <div class="timeline-item mb-12 relative">
-                        <h3 class="text-xl font-bold text-[#252422]">Web Development Certification</h3>
-                        <p class="font-medium text-[#6b6762]">Moqboolcourses.com</p>
+                        <h3 class="text-xl font-bold text-[#252422]">C++ & OOP – Coursera</h3>
+                        <p class="font-medium text-[#6b6762]">Certification</p>
                     </div>
                      <div class="timeline-item mb-12 relative">
-                        <h3 class="text-xl font-bold text-[#252422]">HTML & CSS Certification</h3>
-                        <p class="font-medium text-[#6b6762]">Cisco Networking Academy</p>
+                        <h3 class="text-xl font-bold text-[#252422]">HTML & CSS – Cisco Networking Academy</h3>
+                        <p class="font-medium text-[#6b6762]">Certification</p>
                     </div>
                     <div class="timeline-item relative">
-                        <h3 class="text-xl font-bold text-[#252422]">C++ & OOP Certification</h3>
-                        <p class="font-medium text-[#6b6762]">Coursera</p>
+                        <h3 class="text-xl font-bold text-[#252422]">Web Development Certificate – Moqboolcourses.com</h3>
+                        <p class="font-medium text-[#6b6762]">Certification</p>
                     </div>
                 </div>
             </div>
@@ -184,8 +204,12 @@
 
     <footer class="bg-white mt-16 md:mt-24">
         <div class="container mx-auto px-6 py-8 text-center text-gray-600">
-            <p>&copy; 2024 Umair Khalid. All Rights Reserved.</p>
-            <p class="text-sm mt-2">📍 Kotli, Azad Kashmir, Pakistan</p>
+            <p>
+                &copy; 2025 Umair Khalid. All Rights Reserved.
+            </p>
+            <p class="text-sm mt-2">
+                📍 Kotli, Azad Kashmir, Pakistan
+            </p>
         </div>
     </footer>
 
@@ -195,10 +219,10 @@
             const skillsChart = new Chart(ctx, {
                 type: 'radar',
                 data: {
-                    labels: ['Backend', 'Database', 'Frontend', 'Languages', 'Tools & Platforms'],
+                    labels: ['Programming & Frameworks', 'Databases & Tools', 'Web Technologies', 'Soft Skills'],
                     datasets: [{
                         label: 'Proficiency',
-                        data: [90, 85, 75, 80, 95],
+                        data: [90, 90, 90, 90],
                         backgroundColor: 'rgba(163, 126, 98, 0.2)',
                         borderColor: 'rgba(163, 126, 98, 1)',
                         pointBackgroundColor: 'rgba(163, 126, 98, 1)',
@@ -220,11 +244,10 @@
                                     const category = context.label;
                                     let skills = '';
                                     switch(category) {
-                                        case 'Backend': skills = 'C#, .NET Core, MVC, Blazor'; break;
-                                        case 'Database': skills = 'SQL, EF Core, SQL Server, LINQ'; break;
-                                        case 'Frontend': skills = 'HTML, CSS, Bootstrap'; break;
-                                        case 'Languages': skills = 'C++, Java, C#'; break;
-                                        case 'Tools & Platforms': skills = 'Git, VS Code, Visual Studio'; break;
+                                        case 'Programming & Frameworks': skills = 'C#, C++, Java, .NET Core, ASP.NET MVC, Blazor, Razor Pages, LINQ'; break;
+                                        case 'Databases & Tools': skills = 'SQL Server, EF Core, GitHub, Visual Studio, VS Code, Android Studio'; break;
+                                        case 'Web Technologies': skills = 'HTML, CSS, Bootstrap, Blazor Bootstrap'; break;
+                                        case 'Soft Skills': skills = 'Problem-Solving, Team Collaboration, Communication, Self-Learning'; break;
                                     }
                                     return skills.split(', ');
                                 }
@@ -301,4 +324,3 @@
     </script>
 </body>
 </html>
-
