--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     Profile Summary
                 </h2>
                 <p class="text-lg leading-relaxed text-[#403d39]">
-                    Motivated and detail-oriented **.NET Developer** with over **1.5 years of practical experience** in building web applications using Razor Pages, MVC, and Blazor. Proficient in C#, EF Core, LINQ, and SQL Server, with a strong foundation in both frontend and backend development. Experienced in designing admin panels, user management systems, and database-driven applications. Currently enhancing skills in API development to deliver scalable and modern web solutions.
+                    Motivated and detail-oriented <b>.NET Developer</b> with over <b>1.5 years of practical experience</b> in building web applications using Razor Pages, MVC, and Blazor. Proficient in C#, EF Core, LINQ, and SQL Server, with a strong foundation in both frontend and backend development. Experienced in designing admin panels, user management systems, and database-driven applications. Currently enhancing skills in API development to deliver scalable and modern web solutions.
                 </p>
             </div>
         </section>
